force-app/main/default/objects/OpportunityLineItem/fields/Account_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_Member__c</fullName>
    <label>Account Team Member</label>
    <length>50</length>
    <type>Text</type>
</CustomField>