force-app/main/default/objects/OpportunityLineItem/fields/AgreementDate__c.field-meta.xml
<CustomField>
    <fullName>AgreementDate__c</fullName>
    <inlineHelpText>Countersigned date of agreement (manually set by membership sales)</inlineHelpText>
    <label>Agreement Date</label>
    <type>Date</type>
</CustomField>