force-app/main/default/objects/OpportunityLineItem/fields/Authorized_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorized Signatory</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Product (Authorized Signatory)</relationshipLabel>
    <relationshipName>Opportunity_ProductAygk</relationshipName>
    <type>Lookup</type>
</CustomField>