force-app/main/default/objects/OpportunityLineItem/fields/Billing_Contact2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Product (Billing Contact 2)</relationshipLabel>
    <relationshipName>Opportunity_Product6</relationshipName>
    <type>Lookup</type>
</CustomField>