force-app/main/default/objects/OpportunityLineItem/fields/Billing_Contact3__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Product (Billing Contact 3)</relationshipLabel>
    <relationshipName>Opportunity_Product7</relationshipName>
    <type>Lookup</type>
</CustomField>