force-app/main/default/objects/OpportunityLineItem/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Product (Billing Contact)</relationshipLabel>
    <relationshipName>Opportunity_Product5</relationshipName>
    <type>Lookup</type>
</CustomField>