force-app/main/default/objects/OpportunityLineItem/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <formula>TEXT(Opportunity.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Type</label>
    <type>Text</type>
</CustomField>