force-app/main/default/objects/OpportunityLineItem/fields/Bypass_Validation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field allows the ChangeProductUtil class to bypass a validation rule on this object.  Anytime you run a report on this field, it should be FALSE for *all* records.  This field should not be included on any page layouts; it should only be set by Apex.</description>
    <label>Bypass Validation</label>
    <type>Checkbox</type>
</CustomField>