force-app/main/default/objects/OpportunityLineItem/fields/Class_Development_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Class_Development_Revenue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Applicable only for Training. Check this if the Revenue is not standard class revenue and needs to be considered for New Class Development.</inlineHelpText>
    <label>Class Development Revenue</label>
    <type>Checkbox</type>
</CustomField>