force-app/main/default/objects/OpportunityLineItem/fields/CNCF_Level__c.field-meta.xml
<CustomField>
    <fullName>CNCF_Level__c</fullName>
    <label>CNCF Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>End User Supporter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>