force-app/main/default/objects/OpportunityLineItem/fields/Community_Member__c.field-meta.xml
<CustomField>
    <fullName>Community_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Community Member</label>
    <type>Checkbox</type>
</CustomField>