force-app/main/default/objects/OpportunityLineItem/fields/Converted_to_Asset__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted to Asset?</label>
    <type>Checkbox</type>
</CustomField>