force-app/main/default/objects/OpportunityLineItem/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Text that will be displayed on invoice</description>
    <inlineHelpText>Text that will be displayed on invoice</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>