force-app/main/default/objects/OpportunityLineItem/fields/Discount_in_amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_in_amount__c</fullName>
    <label>Discount(in amount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>