force-app/main/default/objects/OpportunityLineItem/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Standard Memberships will auto-populate date.</description>
    <inlineHelpText>Standard Memberships will auto-populate date.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>