force-app/main/default/objects/OpportunityLineItem/fields/Events__c.field-meta.xml
<CustomField>
    <fullName>Events__c</fullName>
    <label>Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>