force-app/main/default/objects/OpportunityLineItem/fields/Individual_Member__c.field-meta.xml
<CustomField>
    <fullName>Individual_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Individual Member</label>
    <type>Checkbox</type>
</CustomField>