force-app/main/default/objects/OpportunityLineItem/fields/Initial_Price__c.field-meta.xml
<CustomField>
    <fullName>Initial_Price__c</fullName>
    <label>Initial Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>