force-app/main/default/objects/OpportunityLineItem/fields/Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Install_Date__c</fullName>
    <formula>Opportunity.Parent_Asset__r.InstallDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Install Date</label>
    <type>Date</type>
</CustomField>