force-app/main/default/objects/OpportunityLineItem/fields/Is_Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Person_Account__c</fullName>
    <formula>OR(Opportunity.Account.IsPersonAccount, Product_Name__c = &apos;Individual Membership&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Person Account</label>
    <type>Checkbox</type>
</CustomField>