force-app/main/default/objects/OpportunityLineItem/fields/JoinNow_Update__c.field-meta.xml
<CustomField>
    <fullName>JoinNow_Update__c</fullName>
    <formula>Opportunity.JoinNow_Update__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JoinNow Update</label>
    <type>Date</type>
</CustomField>