force-app/main/default/objects/OpportunityLineItem/fields/Legal_Contact__c.field-meta.xml
<CustomField>
    <fullName>Legal_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Name</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Product (Legal Contact)</relationshipLabel>
    <relationshipName>Opportunity_Product4</relationshipName>
    <type>Lookup</type>
</CustomField>