force-app/main/default/objects/OpportunityLineItem/fields/Marketing_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Contact 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Product (Marketing Contact 2)</relationshipLabel>
    <relationshipName>Opportunity_Product8</relationshipName>
    <type>Lookup</type>
</CustomField>