force-app/main/default/objects/OpportunityLineItem/fields/Marketing_Contact_3__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Contact_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Contact 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Product (Marketing Contact 3)</relationshipLabel>
    <relationshipName>Opportunity_Product9</relationshipName>
    <type>Lookup</type>
</CustomField>