force-app/main/default/objects/OpportunityLineItem/fields/Marketing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Product (Marketing Contact)</relationshipLabel>
    <relationshipName>Opportunity_Product2</relationshipName>
    <type>Lookup</type>
</CustomField>