force-app/main/default/objects/OpportunityLineItem/fields/MC_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>MC_Account_ID__c</fullName>
    <formula>Opportunity.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC Account ID</label>
    <type>Text</type>
</CustomField>