force-app/main/default/objects/OpportunityLineItem/fields/MC_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>MC_Account_Name__c</fullName>
    <formula>Opportunity.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC Account Name</label>
    <type>Text</type>
</CustomField>