force-app/main/default/objects/OpportunityLineItem/fields/MC_Opp_Product_Detail_ID__c.field-meta.xml
<CustomField>
    <fullName>MC_Opp_Product_Detail_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC Opp Product Detail ID</label>
    <type>Text</type>
</CustomField>