force-app/main/default/objects/OpportunityLineItem/fields/MC_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>MC_Opportunity_ID__c</fullName>
    <formula>Opportunity.MC_Opportunity_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC Opportunity ID</label>
    <type>Text</type>
</CustomField>