force-app/main/default/objects/OpportunityLineItem/fields/MC_Trigger__c.field-meta.xml
<CustomField>
    <fullName>MC_Trigger__c</fullName>
    <label>MC Trigger</label>
    <length>250</length>
    <type>Text</type>
</CustomField>