force-app/main/default/objects/OpportunityLineItem/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <formula>Product_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership</label>
    <type>Text</type>
</CustomField>