force-app/main/default/objects/OpportunityLineItem/fields/Membership_Voting_Contact_Roles__c.field-meta.xml
<CustomField>
    <fullName>Membership_Voting_Contact_Roles__c</fullName>
    <label>Membership Voting Contact Roles</label>
    <length>25</length>
    <type>Text</type>
</CustomField>