force-app/main/default/objects/OpportunityLineItem/fields/NetSuite_Class__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Class__c</fullName>
    <label>NetSuite Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>