force-app/main/default/objects/OpportunityLineItem/fields/NetSuite_Deferred_Revenue_Account__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Deferred_Revenue_Account__c</fullName>
    <label>NetSuite Deferred Revenue Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>