force-app/main/default/objects/OpportunityLineItem/fields/NetSuite_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_ID__c</fullName>
    <label>NetSuite ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>