force-app/main/default/objects/OpportunityLineItem/fields/NetSuite_Income_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Income_GL_Account__c</fullName>
    <label>NetSuite Income GL Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>