force-app/main/default/objects/OpportunityLineItem/fields/NetSuite_Invoice_Memo__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Invoice_Memo__c</fullName>
    <description>Add notes for the Finance team; internal only, customer will not see these</description>
    <inlineHelpText>Add notes for the Finance team; internal only, customer will not see these</inlineHelpText>
    <label>NetSuite Invoice Memo</label>
    <type>TextArea</type>
</CustomField>