force-app/main/default/objects/OpportunityLineItem/fields/NetSuite_Revenue_Schedule__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Revenue_Schedule__c</fullName>
    <label>NetSuite Revenue Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>