force-app/main/default/objects/OpportunityLineItem/fields/No_Press_Release_Announcement__c.field-meta.xml
<CustomField>
    <fullName>No_Press_Release_Announcement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Press Release Announcement</label>
    <type>Checkbox</type>
</CustomField>