force-app/main/default/objects/OpportunityLineItem/fields/OLIs_without_start_date_as_first_date__c.field-meta.xml
<CustomField>
    <fullName>OLIs_without_start_date_as_first_date__c</fullName>
    <formula>IF(AND(DAY(Start_Date__c) &lt;&gt; 1, LEN(Project__c) &lt;&gt; 0 , NOT(ISPICKVAL(Renewal_Type__c,&apos;Calendar Year&apos;)) ),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OLIs without start date as first date</label>
    <type>Checkbox</type>
</CustomField>