force-app/main/default/objects/OpportunityLineItem/fields/Overwrite_Training_Product__c.field-meta.xml
<CustomField>
    <fullName>Overwrite_Training_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Overwrite Training Product</label>
    <referenceTo>Training__c</referenceTo>
    <relationshipLabel>Opportunity Product (Overwrite Training Product)</relationshipLabel>
    <relationshipName>Opportunity_Product1</relationshipName>
    <type>Lookup</type>
</CustomField>