force-app/main/default/objects/OpportunityLineItem/fields/Parent_OppLineItem__c.field-meta.xml
<CustomField>
    <fullName>Parent_OppLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent OppLineItem</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>