force-app/main/default/objects/OpportunityLineItem/fields/PaymentFrequency__c.field-meta.xml
<CustomField>
    <fullName>PaymentFrequency__c</fullName>
    <label>Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Frequency</valueSetName>
    </valueSet>
</CustomField>