force-app/main/default/objects/OpportunityLineItem/fields/PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerms__c</fullName>
    <formula>TEXT(Opportunity.PaymentTerms__c)</formula>
    <label>Payment Terms</label>
    <type>Text</type>
</CustomField>