force-app/main/default/objects/OpportunityLineItem/fields/PO_Contact__c.field-meta.xml
<CustomField>
    <fullName>PO_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PO Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Product (PO Contact)</relationshipLabel>
    <relationshipName>Opportunity_ProductAvjN</relationshipName>
    <type>Lookup</type>
</CustomField>