force-app/main/default/objects/OpportunityLineItem/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>Cannot be entered after closed won. Notify Finance via email if needed.</description>
    <inlineHelpText>Cannot be entered after closed won. Notify Finance via email if needed.</inlineHelpText>
    <label>PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>