force-app/main/default/objects/OpportunityLineItem/fields/Premier_Member_Technical__c.field-meta.xml
<CustomField>
    <fullName>Premier_Member_Technical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premier Member Technical</label>
    <type>Checkbox</type>
</CustomField>