force-app/main/default/objects/OpportunityLineItem/fields/Press_Contact__c.field-meta.xml
<CustomField>
    <fullName>Press_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Press Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Product (Press Contact)</relationshipLabel>
    <relationshipName>Opportunity_Product3</relationshipName>
    <type>Lookup</type>
</CustomField>