force-app/main/default/objects/OpportunityLineItem/fields/Product_Associate__c.field-meta.xml
<CustomField>
    <fullName>Product_Associate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Associate</label>
    <type>Checkbox</type>
</CustomField>