force-app/main/default/objects/OpportunityLineItem/fields/Product_General__c.field-meta.xml
<CustomField>
    <fullName>Product_General__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product General</label>
    <type>Checkbox</type>
</CustomField>