force-app/main/default/objects/OpportunityLineItem/fields/Product_Premier__c.field-meta.xml
<CustomField>
    <fullName>Product_Premier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Premier</label>
    <type>Checkbox</type>
</CustomField>