force-app/main/default/objects/OpportunityLineItem/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>zzProject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>