force-app/main/default/objects/OpportunityLineItem/fields/Project_Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Event_Status__c</fullName>
    <label>Project/Event Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>