force-app/main/default/objects/OpportunityLineItem/fields/Prorate__c.field-meta.xml
<CustomField>
    <fullName>Prorate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prorate</label>
    <type>Checkbox</type>
</CustomField>