force-app/main/default/objects/OpportunityLineItem/fields/QuantityLabel__c.field-meta.xml
<CustomField>
    <fullName>QuantityLabel__c</fullName>
    <formula>TEXT(Quantity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuantityLabel</label>
    <type>Text</type>
</CustomField>