force-app/main/default/objects/OpportunityLineItem/fields/Quote_Product__c.field-meta.xml
<CustomField>
    <fullName>Quote_Product__c</fullName>
    <label>Quote Product</label>
    <length>150</length>
    <type>Text</type>
</CustomField>