force-app/main/default/objects/OpportunityLineItem/fields/Renewal_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Campaign__c</fullName>
    <label>Renewal Campaign</label>
    <length>250</length>
    <type>Text</type>
</CustomField>