force-app/main/default/objects/OpportunityLineItem/fields/Renewal_Opportunity_Created__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity_Created__c</fullName>
    <formula>Opportunity.Purchase_History_RenewalOpportunityCreat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Opportunity Created?</label>
    <type>Checkbox</type>
</CustomField>