force-app/main/default/objects/OpportunityLineItem/fields/Representative_Voting_Contact__c.field-meta.xml
<CustomField>
    <fullName>Representative_Voting_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Required</inlineHelpText>
    <label>Representative/Voting Contact*</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>