force-app/main/default/objects/OpportunityLineItem/fields/Required_Active_LF_Membership__c.field-meta.xml
<CustomField>
    <fullName>Required_Active_LF_Membership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required Active LF Membership</label>
    <type>Checkbox</type>
</CustomField>