force-app/main/default/objects/OpportunityLineItem/fields/Skip_NetSuite_Sync__c.field-meta.xml
<CustomField>
    <fullName>Skip_NetSuite_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, the Purchase History that is created from this line item will not be sent to NetSuite. You probably don&apos;t want this.</description>
    <inlineHelpText>When selected, the Purchase History that is created from this line item will not be sent to NetSuite. You probably don&apos;t want this.</inlineHelpText>
    <label>Skip NetSuite Sync</label>
    <type>Checkbox</type>
</CustomField>