force-app/main/default/objects/OpportunityLineItem/fields/Skip_Sync_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Skip_Sync_Updated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skip Sync Updated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Product1</relationshipName>
    <type>Lookup</type>
</CustomField>