force-app/main/default/objects/OpportunityLineItem/fields/Skip_Sync_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Skip_Sync_Updated_On__c</fullName>
    <label>Skip Sync Updated On</label>
    <type>DateTime</type>
</CustomField>