force-app/main/default/objects/OpportunityLineItem/fields/Sponsorship_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsorship Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Product (Sponsorship Contact)</relationshipLabel>
    <relationshipName>Opportunity_ProductCaRv</relationshipName>
    <type>Lookup</type>
</CustomField>