force-app/main/default/objects/OpportunityLineItem/fields/Start1__c.field-meta.xml
<CustomField>
    <fullName>Start1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start1</label>
    <type>Checkbox</type>
</CustomField>