force-app/main/default/objects/OpportunityLineItem/fields/Start2000__c.field-meta.xml
<CustomField>
    <fullName>Start2000__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start2000</label>
    <type>Checkbox</type>
</CustomField>