force-app/main/default/objects/OpportunityLineItem/fields/Start5000__c.field-meta.xml
<CustomField>
    <fullName>Start5000__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start5000</label>
    <type>Checkbox</type>
</CustomField>