force-app/main/default/objects/OpportunityLineItem/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Required</inlineHelpText>
    <label>Start Date*</label>
    <type>Date</type>
</CustomField>