force-app/main/default/objects/OpportunityLineItem/fields/Team_Member_Title__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Title__c</fullName>
    <label>Team Member Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>