force-app/main/default/objects/OpportunityLineItem/fields/Technical_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Technical_Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Contact 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Product (Technical Contact 2)</relationshipLabel>
    <relationshipName>Opportunity_Product4ow4</relationshipName>
    <type>Lookup</type>
</CustomField>