force-app/main/default/objects/OpportunityLineItem/fields/Technical_Contact_3__c.field-meta.xml
<CustomField>
    <fullName>Technical_Contact_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Contact 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Product (Technical Contact 3)</relationshipLabel>
    <relationshipName>Opportunity_Product4own</relationshipName>
    <type>Lookup</type>
</CustomField>