force-app/main/default/objects/OpportunityLineItem/fields/Technical_Contact__c.field-meta.xml
<CustomField>
    <fullName>Technical_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Product (Technical Contact)</relationshipLabel>
    <relationshipName>Opportunity_Product1</relationshipName>
    <type>Lookup</type>
</CustomField>