force-app/main/default/objects/OpportunityLineItem/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>