force-app/main/default/objects/OpportunityLineItem/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training</label>
    <referenceTo>Training__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>