force-app/main/default/objects/OpportunityLineItem/fields/Training_Category__c.field-meta.xml
<CustomField>
    <fullName>Training_Category__c</fullName>
    <formula>TEXT(Training__r.Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Category</label>
    <type>Text</type>
</CustomField>