force-app/main/default/objects/OpportunityLineItem/fields/Trainings__c.field-meta.xml
<CustomField>
    <fullName>Trainings__c</fullName>
    <label>Training</label>
    <length>255</length>
    <type>Text</type>
</CustomField>